# schemamap

./: .dockerignore  .editorconfig  .envrc  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  create_schemamap_schema.sql  create_schemamap_users.sql  devenv.nix  devenv.yaml  docker-compose.yml  flake.nix  grant_schemamap_usage.sql  install_schemamap.sh  justfile  package.nix  process-compose.test.yml  schemamap.devenv.nix  sql
.github/workflows/: push-tag.yml  release.yml  test.yml
bash/: .gitignore  README.md  devenv.nix  schemamap.sh
clojure/: .dir-locals.el  README.md  build.clj  deps.edn  justfile
clojure/resources/io/schemamap/db/migrations/: R__repeatable.sql  V000001__init.sql  V000002__data_migrations.sql  V000002__i18n.sql  (+12 more)
clojure/src/io/schemamap/: core.clj
clojure/test/io/schemamap/: core_test.clj  test_util.clj
devenv/: create-flyway-migration.nix
docker/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  init_schemamap.sh  justfile  port-fwd-postgres.sh
docker/test_app_migrations/: V001__add_organizations.sql  V002__integrate_schemamap.sql
docs/: .envrc  package.json
examples/odoo/: .gitignore  README.md  docker-compose.yml  justfile
fixtures/: adventureworks_i18n.json
rust/: .gitignore  Cargo.toml  create_schemamap_schema.sql  create_schemamap_users.sql  grant_schemamap_usage.sql  justfile  schemamap_dev.sql
rust/src/: common.rs  doctor.rs  init.rs  main.rs  porcelain.rs  up.rs
rust/src/parsers/: default.rs  docker_compose.rs  env.rs  hasura.rs  mod.rs  pgpass.rs  pgsync.rs  supabase.rs
sql/: R__init.sql
