[package]
name = "schemamap"
version = "0.4.1"
edition = "2021"

[features]
console = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-serde_json-1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
thiserror = "1.0"
dotenv = "0.15"
log = "0.4"
pretty_env_logger = "0.5"
rathole = "0.5.0"
anyhow = "1.0.86"
dirs = "5.0.1"
directories = "5.0"
atty = "0.2.14"
tracing-subscriber = "0.3.18"
dialoguer = "0.11.0"
console = "0.15.8"
indicatif = "0.17.8"
url_open = "0.0.2"
whoami = "1.5.1"
clap_mangen = "0.2.22"
clap_complete = "4.5.8"
rustyline = "14.0.0"
url = "2.5.2"
lazy_static = "1.5.0"
docker-compose-types = "0.14.0"
git2 = "0.14.4"

[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "0.10", features = ["vendored"], optional = true }

[build-dependencies]
clap_mangen = "0.2.22"
